--- a/dotnet-express-mapper/appsettings.json
+++ b/dotnet-express-mapper/appsettings.json
@@ -1,4 +1,5 @@
 ﻿{
+  "ConnectionString": "Server=localhost;Database=webapp;User Id=sa;Password=Your_password123;",
   "MongoDB": {
       "Database": "BookDB",
       "Container": "mongodb://root:example@mongo:27017"
