--- a/dotnet-express-mapper/dotnet-express-mapper.csproj
+++ b/dotnet-express-mapper/dotnet-express-mapper.csproj
@@ -18,4 +18,7 @@
     <Folder Include="Models\" />
     <Folder Include="Services\" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Migrations\20190821080642_InitCreate.cs" />
+  </ItemGroup>
 </Project>
