--- a/devops/docker-compose.yml
+++ b/devops/docker-compose.yml
@@ -19,8 +19,8 @@ services:
       ACCEPT_EULA: Y
     ports:
       - "1433:1433"
-    volumes:
-      - database1:/var/opt/mssql
+    # volumes:
+    #   - data8:/var/opt/mssql
 
   webapi:
     container_name: webapi
@@ -39,5 +39,5 @@ services:
       - db
       - mongo
 
-volumes:
-  database1:
+# volumes:
+#   data8:
